fixed glitch with navigating sections - small edits to type and some minor styling changes to adapt to rendering on mobile devices

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -524,9 +524,9 @@ a#logo {
   margin-bottom:10px;
 }
 
-#about-div.section-inner {
-  margin-top: -3%;
-}
+/* #about-div.section-inner {
+  margin-top: -1%;
+} */
 
 /*==============================================
 06. SERVICES BLOCK CSS
@@ -672,75 +672,7 @@ a#logo {
   color:#fff !important;
   opacity:1;
 }
-.input-field {
-  margin-bottom:15px;
-}
-.form-control {
-  height: 50px;
-  color:#fff;
-  border: none;
-  background:rgba(250,250,250,0.05);
-  border: 1px solid rgba(250,250,250,0.5);
-  border-radius: 10px;
-  padding:4px 22px;
-  font-size:14px;
-  margin-bottom: 30px;
-}
-.form-control:focus {
-  box-shadow:none;
-  outline:none;
-  background:rgba(0,0,0,0.05);
-  border: 1px solid rgba(250,250,250,1);
-  color:#fff;
-}
-.index .form-control.form-control-dark {
-  background: rgba(250,250,250, 0.75);
-  color: #fff;
-}
-.index .form-control.form-control-dark:focus {
-  background: rgba(54, 40, 158, 0.85);
-  color: #fff;
-}
-.index .form-control.form-control-dark::-webkit-input-placeholder {
-  color: #fff !important;
-}
-.index .form-control.form-control-dark::-moz-placeholder {
-  color:#fff !important;
-}
-.index .form-control.form-control-dark:-ms-input-placeholder {
-  color:#fff !important;
-}
-.index .form-control.form-control-dark:-moz-placeholder {
-  color:#fff !important;
-}
-.form-control.form-control-dark:focus {
-  background: rgba(0, 0, 0, 0.2);
-}
-.form-control.form-control-dark {
-  background: rgba(0, 0, 0, 0.1);
-  color: #222;
-  border: none;
-}
-.form-control.form-control-dark::-webkit-input-placeholder {
-  color:#222 !important;
-  opacity:0.7;
-}
-.form-control.form-control-dark::-moz-placeholder {
-  color:#222 !important;
-  opacity:0.7;
-}
-.form-control.form-control-dark:-ms-input-placeholder {
-  color:#222 !important;
-  opacity:0.7;
-}
-.form-control.form-control-dark:-moz-placeholder {
-  color:#222 !important;
-  opacity:0.7;
-}
-textarea.form-control {
-  height:123px;
-  padding-top:15px;
-}
+
 .contact-section .btn {
   width:100%;
 }
@@ -796,7 +728,7 @@ textarea.form-control {
   margin: 0 auto;
 }
 .testimonials-section .item h4 {
-  margin-top: 40px;
+  margin-top: 20px;
   font-size: 22px;
   text-transform: capitalize;
   font-weight: 700;
@@ -811,12 +743,12 @@ textarea.form-control {
 ================================================*/
 
 .skills-row {
-  margin-top: 40px;
+  margin-top: 60px;
 }
 .skill-item {
   border-bottom: 1px solid rgba(250,250,250,0.1);
-  margin-bottom: 50px;
-  padding-bottom: 50px;
+  margin-bottom: 5px;
+  padding-bottom: 5px;
 }
 .last-skill {
   border-bottom: none;
@@ -842,7 +774,7 @@ textarea.form-control {
   text-transform: uppercase;
   font-weight: 700;
   color: #fff;
-  text-align: right;
+  text-align: center;
   margin-bottom: 10px;
 }
 .skill-bar {
@@ -851,7 +783,7 @@ textarea.form-control {
   border-radius: 3px;
   background-color: rgba(250,250,250,0.25);
   position: relative;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
 }
 .filled-bar-javascript {
   position: absolute;
